# lux

./: Cargo.toml  README.md  SPECIFICATION.md
crates/lux-cdc/: Cargo.toml
crates/lux-cdc/src/: fastcdc.rs  gear.rs  lib.rs
crates/lux-core/: Cargo.toml
crates/lux-core/src/: identifiers.rs  keys.rs  lib.rs  time.rs
crates/lux-core/src/crypto/: aead.rs  blake3_hash.rs  hkdf.rs  keys.rs  mod.rs  signature.rs
crates/lux-core/src/encoding/: mod.rs
crates/lux-dht/: Cargo.toml
crates/lux-dht/src/: lib.rs  record.rs  resilience.rs  routing.rs  service.rs
crates/lux-fs/: Cargo.toml
crates/lux-fs/src/: inode.rs  lib.rs  mount.rs  ops.rs  vfs.rs
crates/lux-net/: Cargo.toml
crates/lux-net/src/: connection.rs  lib.rs  noise.rs  quic.rs  transport.rs
crates/lux-proto/: Cargo.toml
crates/lux-proto/src/: blob.rs  dag.rs  dht.rs  lib.rs  manifest.rs  messages.rs  storage.rs  uri.rs
crates/lux-store/: Cargo.toml
crates/lux-store/src/: blob.rs  cache.rs  chunk.rs  config.rs  lib.rs  manifest.rs
crates/lux-tests/: Cargo.toml
crates/lux-tests/src/: harness.rs  lib.rs  node.rs
crates/lux-tests/tests/: crypto_tests.rs  data_exchange_tests.rs  network_integration.rs  noise_integration.rs  spec_edge_cases.rs  storage_integration.rs
